styles/app.css
:root {
    --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";

    --user-input--font-size: 24px;
    --user-input--font-weight: 200;
    --user-input--background-color: #20252b;
    --user-input--color: #fff;
    --user-input--height: 60px;
    --user-input--side-padding: 15px;
    --user-input--loader-width: 70px;
    --user-input--loader-speed: 1.4s;
    --user-input--loader-dot-size: 8px;
    --user-input--icon-size: 28px;

    --search-results--background-color: #272c34;
    --search-results--item-active-background-color: #3d4452;
    --search-results--item-active-text-color: #fff;
    --search-results--item-name-text-color: #aab2c0;
    --search-results--item-name-font-weight: 400;
    --search-results--item-name-padding: 0 0 2px;
    --search-results--item-description-text-color: #ccc;
    --search-results--item-descriptioin-font-size: 12px;
    --search-results--item-description-font-weight: 200;
    --search-results--item-height: 50px;
    --search-results--item-side-padding: 15px;
    --search-results--item-icon-size: 30px;
    --search-results--item-icon-color: #fff;
    --search-results--item-info-container-padding: 10px;

    --scrollbar--size: 8px;
    --scrollbar--foreground-color: #3d444f;
    --scrollbar--background-color: #1f2328;
}

body {
    padding: 0;
    margin: 0;
    font-family: var(--font-family);
}

#app {
    display: flex;
    flex-direction: column;
}

.user-input {
    position: relative;
    background-color: var(--user-input--background-color);
    width: 100%;
    height: var(--user-input--height);
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    padding: 0 var(--user-input--side-padding);
    box-sizing: border-box;
    overflow: hidden;
    -webkit-app-region: drag;
}

.user-input__search-icon-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding-right: calc(var(--user-input--side-padding) / 2);
}

.user-input__search-icon {
    fill: var(--user-input--color);
    width: var(--user-input--icon-size);
    height: var(--user-input--icon-size);
    transition: all 500ms ease-in-out;
}

.user-input__search-icon.spinning {
    animation: spinning;
    animation-duration: 1.5s;
    animation-fill-mode: forwards;
    animation-iteration-count: infinite;
}

.user-input__input {
    background: transparent;
    width: 100%;
    border: none;
    outline: none;
    box-sizing: border-box;
    font-size: var(--user-input--font-size);
    font-weight: var(--user-input--font-weight);
    color: var(--user-input--color);
    -webkit-app-region: no-drag;
}

.user-input__input:focus {
    outline: none;
}

.user-input__user-confirmation-container {
    position: absolute;
    height: 100%;
    top: 0;
    right: 0;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    padding: 0 15px;
    color: var(--user-input--color);
    font-size: 14px;
    font-weight: 100;
    transform: translateX(100%);
    transition: all 250ms ease-in-out;
}

.user-input__user-confirmation-container.visible {
    transform: translateX(0);
}

.user-input__user-confirmation-icon {
    width: 24px;
    height: 24px;
    margin-right: 5px;
}

.search-results {
    background-color: var(--search-results--background-color);
    height: calc(100vh - var(--user-input--height));
    overflow-y: auto;
    overflow-x: hidden;
    position: relative;
}

.search-results.scroll-disabled {
    overflow: hidden;
}

.search-results__item {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    height: var(--search-results--item-height);
    padding: 0 var(--search-results--item-side-padding);
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    user-select: none;
}

.search-results__item.active {
    background-color: var(--search-results--item-active-background-color);
}

.search-results__item-icon-container {
    width: var(--search-results--item-icon-size);
    height: var(--search-results--item-icon-size);
    position: relative;
}

.search-results__item-icon {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.search-results__item-icon--url {
    max-width: 100%;
    max-height: 100%;
}

.search-results__item-icon--svg {
    width: 100%;
    height: 100%;
    fill: var(--search-results--item-icon-color);
}

.search-results__item-icon-overlay {
    background-color: var(--search-results--background-color);
    opacity: 0.25;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
}

.search-results__item-icon-overlay.active {
    opacity: 0;
}

.search-results__item-info-container {
    flex-grow: 1;
    padding: 0 var(--search-results--item-info-container-padding);
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    max-width: calc(100% - var(--search-results--item-icon-size));  
}

.search-results__item-name,
.search-results__item-description {
    width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.search-results__item-name {
    color: var(--search-results--item-name-text-color);
    font-weight: var(--search-results--item-name-font-weight);
    padding: var(--search-results--item-name-padding);
}

.search-results__item-name.active {
    color: var(--search-results--item-active-text-color);
}

.search-results__item-description {
    display: none;
    color: var(--search-results--item-description-text-color);
    font-size: var(--search-results--item-descriptioin-font-size);
    font-weight: var(--search-results--item-description-font-weight);
}

.search-results__item-description.active {
    color: var(--search-results--item-active-description-color);
}

.search-results__item-description.visible {
    display: block;
}

.search-results__overlay {
    background-color: var(--search-results--background-color);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0.75;
}

.settings__container {
    padding: 15px;
}

::-webkit-scrollbar {
    width: var(--scrollbar--size);
    height: var(--scrollbar--size);
}

::-webkit-scrollbar-thumb {
    background: var(--scrollbar--foreground-color);
}

::-webkit-scrollbar-track {
    background: var(--scrollbar--background-color);
}

@keyframes spinning {
    0% {
        transform: rotate(0deg);
        opacity: 1;
    }
    50% {
        transform: rotate(180deg);
        opacity: 0.5;
    }
    100% {
        transform: rotate(360deg);
        opacity: 1;
    }
}

